--- a/ParserContracts223/ParserContracts223.csproj
+++ b/ParserContracts223/ParserContracts223.csproj
@@ -64,6 +64,7 @@
     <Compile Include="FileList.cs" />
     <Compile Include="Log.cs" />
     <Compile Include="Parser_contract223.cs" />
+    <Compile Include="Parser_suppliers.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Setting.cs" />
