--- a/ParserContracts223/ParserContracts223.csproj
+++ b/ParserContracts223/ParserContracts223.csproj
@@ -62,8 +62,10 @@
     <Compile Include="ConnectToDb.cs" />
     <Compile Include="DownloadFile.cs" />
     <Compile Include="FileList.cs" />
+    <Compile Include="IParser.cs" />
     <Compile Include="Log.cs" />
     <Compile Include="Parser_contract223.cs" />
+    <Compile Include="Parser_customers.cs" />
     <Compile Include="Parser_suppliers.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
