--- a/ParserContracts223/ParserContracts223.csproj
+++ b/ParserContracts223/ParserContracts223.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Setting.cs" />
+    <Compile Include="Tools.cs" />
     <Compile Include="Unzipped.cs" />
   </ItemGroup>
   <ItemGroup>
