--- a/ParserContracts223/ParserContracts223.csproj
+++ b/ParserContracts223/ParserContracts223.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Setting.cs" />
     <Compile Include="Tools.cs" />
+    <Compile Include="TypeArgument.cs" />
     <Compile Include="Unzipped.cs" />
   </ItemGroup>
   <ItemGroup>
